# muzik-offline

./: LICENSE  README.md
.github/workflows/: build-and-release.yml
muzik-offline/: .gitignore  package-lock.json  package.json
muzik-offline/src/: main.tsx
muzik-offline/src-tauri/: .env.enc  .gitignore  2  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
muzik-offline/src-tauri/capabilities/: migrated.json
muzik-offline/src-tauri/src/: main.rs
muzik-offline/src-tauri/src/app/: controller.rs  mod.rs  setup.rs  setup_macos.rs  window.rs
muzik-offline/src-tauri/src/commands/: general_commands.rs  metadata_edit.rs  metadata_retriever.rs  mod.rs  refresh_paths_at_start.rs
muzik-offline/src-tauri/src/components/: album.rs  artist.rs  audio_manager.rs  event_payload.rs  genre.rs  hmaptype.rs  kira_audio_manager.rs  mod.rs  rodio_audio_manager.rs  song.rs
muzik-offline/src-tauri/src/constants/: mod.rs  null_cover_four.rs  null_cover_null.rs  null_cover_one.rs  null_cover_three.rs  null_cover_two.rs
muzik-offline/src-tauri/src/database/: db_api.rs  db_manager.rs  db_struct.rs  mod.rs
muzik-offline/src-tauri/src/export/: export_csv.rs  export_html.rs  export_json.rs  export_pdf.rs  export_txt.rs  export_xml.rs  mod.rs
muzik-offline/src-tauri/src/import/: mod.rs
muzik-offline/src-tauri/src/music/: kira_player.rs  media_control_api.rs  mod.rs  player.rs  rodio_player.rs
muzik-offline/src-tauri/src/socials/: discord_rpc.rs  mod.rs
muzik-offline/src-tauri/src/utils/: general_utils.rs  mod.rs  music_list_organizer.rs
muzik-offline/src-tauri/src/windows/: controller.rs  mod.rs  window.rs
muzik-offline/src/assets/icons/: index.ts
muzik-offline/src/assets/icons/General/: Check.tsx  File.tsx  FolderPlus.tsx  FolderSearch.tsx
muzik-offline/src/assets/icons/Media/: Airplay.tsx
muzik-offline/src/assets/icons/Windows/: LinuxClose.tsx  LinuxMaximize.tsx  LinuxMinimize.tsx  WindowsCloseIcon.tsx  WindowsMaximizeIcon.tsx  WindowsMinimizeIcon.tsx  WindowsRestoreIcon.tsx
muzik-offline/src/database/: database.ts  directories.ts  player.ts  saved_object.ts  side_elements.ts
muzik-offline/src/interface/App/: App.tsx  MiniPlayer.tsx
muzik-offline/src/interface/components/: index.ts
muzik-offline/src/interface/components/cards/: AudioBackendCard.tsx  LargeResizableCover.tsx  RectangleSongBox.tsx  RectangleSongBoxView.tsx  SongCardResizable.tsx  SquareTitleBox.tsx
muzik-offline/src/interface/layouts/: AboutSettings.tsx  AdvancedSettings.tsx  AppearanceSettings.tsx  AudioLabSettings.tsx  ExportSettings.tsx  GeneralSettings.tsx  HistoryNextFloating.tsx  MusicFoldersSettings.tsx  SearchAlbums.tsx  SearchArtists.tsx  SearchGenres.tsx  SearchPlaylists.tsx  SearchSongs.tsx  index.ts
muzik-offline/src/interface/pages/: AlbumDetails.tsx  AllAlbums.tsx  AllArtists.tsx  AllGenres.tsx  AllPlaylists.tsx  AllTracks.tsx  ArtistCatalogue.tsx  GenreView.tsx  PlaylistView.tsx  Settings.tsx
muzik-offline/src/interface/styles/App/: App.scss  (+1 more)
muzik-offline/src/store/: index.ts  reducerStore.ts  reducerTypes.ts  storeTypes.ts
muzik-offline/src/types/: index.ts
muzik-offline/src/utils/: OSeventControl.ts  index.ts  playerControl.ts  reducerUtils.ts
(+77 files in other folders)
