[package]
name = "muzik-offline"
version = "0.8.0"
description = "A desktop music player for listening to music offline."
authors = ["Michael"]
license = "MIT"
repository = "https://github.com/muzik-apps/muzik-offline"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenv = "0.15.0"

[dependencies]
tauri = { version = "2.1.1", features = []  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
id3 = "1.12.0"
tokio = { version = "1.35.0", features = ["full"] }
base64 = "0.21.5"
image = "0.24.7"
kira = "0.8.5"
lofty = "0.18.2"
rand = "0.8.5"
rayon = "1.8.0"
sled = "0.34.7"
dirs = "5.0.1"
discord-rich-presence = "0.2.5"
dotenv = "0.15.0"
souvlaki = "0.7.3"
warp = "0.3.7"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
printpdf = "0.7.0"
tabled = "0.16.0"
walkdir = "2.5.0"
futures = "0.3.31"
rodio = "0.20.1"
trash = "5.2.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v5",              # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = [
	"Foundation",
	"Media",
	"Win32_Foundation",
	"Win32_System_WinRT",
	"Storage_Streams",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
